--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@
 }
 
 :root {
-    --menu-toggler-distane: -180px;
+    --menu-toggler-distane: -166px;
 }
 
 html {
